🍔 Fixed spacing of header

--- a/components/Header.scss
+++ b/components/Header.scss
@@ -98,6 +98,12 @@ header {
       @include flex-direction(column);
       a {
         width: 100%;
+        font-size: 17px;
+        padding-top: 15px;
+        &:last-child {
+            padding-top: 15px;
+            margin: 0;
+        }
       }
     }
     .navigation.navopen-false {
